--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.npz filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
