--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.pdb filter=lfs diff=lfs merge=lfs -text
+*.hkl filter=lfs diff=lfs merge=lfs -text
